# latty

./: .gitignore  build.sh  source.sh
install/: local_setup.sh  setup.sh
log/: latest_build
src/benchmarking/: CMakeLists.txt  package.xml
src/commons/: CMakeLists.txt  package.xml
src/commons/include/commons/: geometry_utils.hpp  stat_utils.hpp
src/commons/src/: geometry_utils.cpp
src/debug_nodes/: CMakeLists.txt  package.xml
src/debug_nodes/include/debug_nodes/: sine_wave.hpp
src/debug_nodes/src/: main.cpp
src/latty_chassis/: CMakeLists.txt  package.xml  plugin_description.xml
src/latty_chassis/config/: latty_controllers.yaml
src/latty_chassis/include/latty_chassis/: imu_publisher.hpp  move_latty.hpp  topic_names.hpp
src/latty_chassis/include/latty_chassis/experimentation/: imu_publisher.hpp  imu_publisher_em.hpp
src/latty_chassis/launch/: spawn_latty_chassis.launch.py
src/latty_chassis/models/: latty_model.sdf
src/latty_chassis/models/latty_chassis_model/: latty_model.config  latty_model.sdf  model.config
src/latty_chassis/models/latty_chassis_model/materials/scripts/: robot.material
src/latty_chassis/models/latty_chassis_model/meshes/: robot.dae
src/latty_chassis/rviz/: latty.rviz
src/latty_chassis/src/: imu_euler_publisher.cpp  main.cpp  move_latty.cpp  odom.cpp
src/latty_chassis/src/experimentation/: imu_euler_publisher.cpp  imu_expm_publisher.cpp
src/latty_chassis/urdf/: latty_model.urdf.xacro
src/latty_chassis/world/: lattys_world.sdf
src/latty_manual_control/: CMakeLists.txt  package.xml
src/latty_manual_control/include/latty_manual_control/: manual_ctrl.hpp
src/latty_manual_control/src/: main.cpp  manual_ctrl.cpp
src/local_planner/: CMakeLists.txt  package.xml
src/local_planner/include/local_planner/: local_planner.hpp
src/local_planner/src/: local_planner.cpp  main.cpp
src/visualizer/: CMakeLists.txt  package.xml
src/visualizer/include/: state_publisher.hpp
src/visualizer/include/visualizer/: state_subscriber.hpp  visualizer.hpp
src/visualizer/src/: main.cpp  state_subscriber.cpp
