<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>latty_chassis</name>
  <version>0.0.1</version>
  <description>Latty chassis robot with ros2_control and Gazebo</description>
  <maintainer email="pranayrao12@gmail.com">pranayt</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Xacro/URDF and TF -->
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <!-- Gazebo + ros2_control -->
  <depend>gazebo_ros</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>

  <exec_depend>gazebo_ros2_control</exec_depend>


  <!-- Messages for Gazebo interaction -->
  <depend>gazebo_msgs</depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!-- So Gazebo can find your models/ directory -->
    <ros2_control plugin="${prefix}/share/latty_chassis/plugin_description.xml"/>
    <gazebo_ros gazebo_model_path="${prefix}/share/${PROJECT_NAME}/models"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
